@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-08T01:02:16Z",
+  "timestamp" : "2025-12-13T00:59:40Z",
   "count_outdated" : 124,
   "uniques_outdated" : 106,
-  "count" : 126,
-  "uniques" : 108,
+  "count" : 128,
+  "uniques" : 110,
   "clones" : [
     {
       "timestamp": "2025-12-04T00:00:00Z",
@@ -22,6 +22,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-12T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
