@@ -1,6 +1,6 @@
 {
-  "count": 2,
-  "uniques": 2,
+  "count": 4,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2025-12-04T00:00:00Z",
@@ -11,6 +11,11 @@
       "timestamp": "2025-12-07T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-12-12T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
